--- a/bantinh.html
+++ b/bantinh.html
@@ -10,11 +10,25 @@
 <body>
     <table>
         <tr>
-            <td><input type="number" name="so1" id="so1">
+            <td colspan="4"><input type="number" name="so1" id="so1">
             </td>
         </tr>
         <tr>
-            <td><input type="number" name="so2" id="so2">
+            <td colspan="4"><input type="number" name="so2" id="so2">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button id="tong" name="tong" value="+">+</button>
+            </td>
+            <td>
+                <button id="hieu" name="hieu" value="-">-</button>
+            </td>
+            <td>
+                <button id="tich" name="tich" value="*">*</button>
+            </td>
+            <td>
+                <button id="thuong" name="thuong" value="/">/</button>
             </td>
         </tr>
     </table>
