tao tr cho phatngon

--- a/bantinh.html
+++ b/bantinh.html
@@ -30,6 +30,8 @@
             <td>
                 <button id="thuong" name="thuong" value="/">/</button>
             </td>
+        <tr>
+            <td id="phatNgon" colspan="4"></td>
         </tr>
     </table>
 </body>
