sua chu phatngon

--- a/bantinh.html
+++ b/bantinh.html
@@ -19,6 +19,9 @@
             </td>
         </tr>
         <tr>
+            <td id="phatngon" colspan="4"></td>
+        </tr>
+        <tr>
             <td>
                 <input onclick="tong()" type="button" value="+">
             </td>
@@ -31,9 +34,6 @@
             <td>
                 <input onclick="thuong()" type="button" value="/">
             </td>
-        <tr>
-            <td id="phatNgon" colspan="4"></td>
-        </tr>
     </table>
 </body>
 
