--- a/bantinh.html
+++ b/bantinh.html
@@ -19,9 +19,6 @@
             </td>
         </tr>
         <tr>
-            <td id="phatngon" colspan="4"></td>
-        </tr>
-        <tr>
             <td>
                 <input onclick="tong()" type="button" value="+">
             </td>
@@ -34,6 +31,15 @@
             <td>
                 <input onclick="thuong()" type="button" value="/">
             </td>
+        <tr>
+            <td id="phatngon" colspan="4"></td>
+        </tr>
+        <tr>
+            <td>
+                <input onclick="use()" type="button" value="use">
+            </td>
+        </tr>
+
     </table>
 </body>
 
