--- a/bantinh.html
+++ b/bantinh.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bàn tính</title>
     <script src="bantinh.js"></script>
+    <style>
+        tr,td {
+            width: 50px; height: 20px
+        }
+    </style>
 </head>
 
 <body>
@@ -32,7 +37,8 @@
                 <input onclick="thuong()" type="button" value="/">
             </td>
         <tr>
-            <td id="phatngon" colspan="4"></td>
+            <td id="hienthi"></td>
+            <td id="phatngon" ></td>
         </tr>
         <tr>
             <td>
