đổi sang dấu bàng

--- a/bantinh.html
+++ b/bantinh.html
@@ -42,7 +42,7 @@
         </tr>
         <tr>
             <td>
-                <input onclick="use()" type="button" value="use">
+                <input onclick="equal()" type="button" value="=">
             </td>
         </tr>
 
