thêm tên bảng tính

--- a/bantinh.html
+++ b/bantinh.html
@@ -16,6 +16,9 @@
 <body>
     <table>
         <tr>
+            <td style ="font-size: large;">BÀN TÍNH THÔNG MINH</td>
+        </tr>
+        <tr>
             <td colspan="4"><input type="number" id="so1">
             </td>
         </tr>
