--- a/bantinh.html
+++ b/bantinh.html
@@ -16,7 +16,8 @@
 <body>
     <table>
         <tr>
-            <td style ="font-size: large;">BÀN TÍNH THÔNG MINH</td>
+            <td style ="font-size: large;" colspan="4">BÀN TÍNH THÔNG MINH</td>
+            
         </tr>
         <tr>
             <td colspan="4"><input type="number" id="so1">
