colspan cho phatngon và hienthi

--- a/bantinh.html
+++ b/bantinh.html
@@ -47,8 +47,8 @@
             </td>
         </tr>
         <tr>
-            <td id="hienthi"></td>
-            <td id="phatngon"></td>
+            <td id="hienthi" colspan="3"></td>
+            <td id="phatngon" colspan="2"></td>
         </tr>
 
     </table>
