tạo hienthi1 và phatngon 1 ẩn

--- a/bantinh.html
+++ b/bantinh.html
@@ -40,15 +40,22 @@
             </td>
 
         <tr>
-            <td>
+            <td colspan="5"><input type="number" id="ketqua an" hidden>
             </td>
+        </tr>
+        <tr></tr>
             <td>
-                <input onclick="equal()" type="button" value="=">
+                <input onclick="equal()" type="button" value="=" id="ketquahienthi">
             </td>
         </tr>
         <tr>
-            <td id="hienthi" colspan="3"></td>
-            <td id="phatngon" colspan="2"></td>
+            <td id="hienthi1" hidden></td>
+            <td id="phatngon1" hidden></td>
+        </tr>
+
+        <tr>
+            <td id="hienthi2" colspan="2"></td>
+            <td id="phatngon2"></td>
         </tr>
 
     </table>
