--- a/bantinh.html
+++ b/bantinh.html
@@ -38,22 +38,21 @@
             <td>
                 <input onclick="thuong()" type="button" value="/">
             </td>
-
         <tr>
-            <td colspan="5"><input type="number" id="ketqua an" hidden>
-            </td>
-        </tr>
-        <tr></tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td>
-                <input onclick="equal()" type="button" value="=" id="ketquahienthi">
+                <input onclick="equal()" type="button" value="=">
             </td>
         </tr>
         <tr>
             <td id="hienthi1" hidden></td>
             <td id="phatngon1" hidden></td>
         </tr>
-
         <tr>
+            <td></td>
             <td id="hienthi2" colspan="2"></td>
             <td id="phatngon2"></td>
         </tr>
